stretched icons on light.gg tooltips fixed

--- a/public/style.css
+++ b/public/style.css
@@ -85,7 +85,7 @@ a {
         color: #09f
     }
 
-img {
+.wepIMG {
     width: 445px;
     height: 225px;
 }
